--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>精选各类黑科技软件资源</title>
+<title>YHY科技站邀请码</title>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 <style>
 /* 全局变量 */
@@ -11,7 +11,7 @@
     --primary-color: #FFB6C1; /* 浅珊瑚粉 */
     --secondary-color: #98FB98; /* 浅绿色 */
     --background-color: #FFFACD; /* 浅米色 */
-    --text-color: #556B2F; /* 棕褐色 */
+    --text-color: #333333; /* 深灰色 */
     --glass-bg: rgba(255, 255, 255, 0.8);
     --glow-color: rgba(255, 182, 193, 0.3); /* 浅珊瑚粉的半透明 */
     --shadow-color: rgba(0, 0, 0, 0.1);
