--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ h1 {
         </li>
         <li class="step">
             <span class="step-number">3</span>
-            <span class="step-description">完成浏览器打开并进入核心资源区</span>
+            <span class="step-description">完成浏览器打开进入邀请码获取通道</span>
         </li>
     </ul>
     <div class="actions">
@@ -338,7 +338,7 @@ h1 {
 </div>
 
 <script>
-    const targetUrl = 'https://r.hengaini9528.makeup/?mod=buy&tid=1';
+    const targetUrl = 'https://store.maozi.io';
     const ua = navigator.userAgent.toLowerCase();
     const isWechat = ua.includes('micromessenger');
     const isQQ = /qq\//.test(ua) || /mqqbrowser/.test(ua);
